force-app/main/default/objects/CloverConnectLog__c/CloverConnectLog__c.object-meta.xml
<CustomObject>
    <label>Clover Connect Log</label>
    <nameField>
        <displayFormat>CCLOG-{00000}</displayFormat>
        <label>Clover Connect Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clover Connect Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>