force-app/main/default/objects/CloverConnectLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>Status__c</columns>
    <columns>Payload__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>